--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -459,7 +459,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "NightSkiing_ac                   600.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,18 +707,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>%</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Name</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>total_chairs</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>double</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>triple</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>quad</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fastQuads</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fastSixes</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>surface</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>trams</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>base_elev</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vertical_drop</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>summit_elev</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>state</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Region</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>yearsOpen</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.303030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SkiableTerrain_ac</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.909091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Runs</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1.212121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LongestRun_mi</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1.515152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>averageSnowfall</th>\n",
+       "      <td>14</td>\n",
+       "      <td>4.242424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Snow Making_ac</th>\n",
+       "      <td>46</td>\n",
+       "      <td>13.939394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>projectedDaysOpen</th>\n",
+       "      <td>47</td>\n",
+       "      <td>14.242424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TerrainParks</th>\n",
+       "      <td>51</td>\n",
+       "      <td>15.454545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>daysOpenLastYear</th>\n",
+       "      <td>51</td>\n",
+       "      <td>15.454545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AdultWeekend</th>\n",
+       "      <td>51</td>\n",
+       "      <td>15.454545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AdultWeekday</th>\n",
+       "      <td>54</td>\n",
+       "      <td>16.363636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NightSkiing_ac</th>\n",
+       "      <td>143</td>\n",
+       "      <td>43.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fastEight</th>\n",
+       "      <td>166</td>\n",
+       "      <td>50.303030</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   count          %\n",
+       "Name                   0   0.000000\n",
+       "total_chairs           0   0.000000\n",
+       "double                 0   0.000000\n",
+       "triple                 0   0.000000\n",
+       "quad                   0   0.000000\n",
+       "fastQuads              0   0.000000\n",
+       "fastSixes              0   0.000000\n",
+       "surface                0   0.000000\n",
+       "trams                  0   0.000000\n",
+       "base_elev              0   0.000000\n",
+       "vertical_drop          0   0.000000\n",
+       "summit_elev            0   0.000000\n",
+       "state                  0   0.000000\n",
+       "Region                 0   0.000000\n",
+       "yearsOpen              1   0.303030\n",
+       "SkiableTerrain_ac      3   0.909091\n",
+       "Runs                   4   1.212121\n",
+       "LongestRun_mi          5   1.515152\n",
+       "averageSnowfall       14   4.242424\n",
+       "Snow Making_ac        46  13.939394\n",
+       "projectedDaysOpen     47  14.242424\n",
+       "TerrainParks          51  15.454545\n",
+       "daysOpenLastYear      51  15.454545\n",
+       "AdultWeekend          51  15.454545\n",
+       "AdultWeekday          54  16.363636\n",
+       "NightSkiing_ac       143  43.333333\n",
+       "fastEight            166  50.303030"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code task 5#\n",
     "#Count (using `.sum()`) the number of missing values (`.isnull()`) in each column of \n",
     "#ski_data as well as the percentages (using `.mean()` instead of `.sum()`).\n",
     "#Order them (increasing or decreasing) using sort_values\n",
     "#Call `pd.concat` to present these in a single table (DataFrame) with the helpful column names 'count' and '%'\n",
-    "missing = ___([ski_data.___.___, 100 * ski_data.___.___], axis=1)\n",
-    "missing.columns=[___, ___]\n",
-    "missing.___(by=___)"
+    "missing = pd.concat([ski_data.isnull().sum(), 100 * ski_data.isnull().mean()], axis=1)\n",
+    "missing.columns=[\"count\", \"%\"]\n",
+    "missing.sort_values(by='count')"
    ]
   },
   {
