Written analysis of work completed

--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -4860,8 +4860,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 3** Your answer here"
+    "**A: 3** \n",
+    "What is the original number of rows in the data? 330  \n",
+    "Was our resort present? Yes, Big Mountain Resort.  \n",
+    "What columns have been removed? Why? Two columns were dropped, \"fastEight\" because it's values were either missing or 0, \"AdultWeekday\" was dropped because the values in both ticket price columns were the same in Montana with \"AdultWeekend\" prices were also more expensive.  \n",
+    "What rows have been removed? Why? 1 row was removed because the resort hadn't opened. Removed multiple rows because there was no price values for those resorts.  \n",
+    "What other issues were found? What remedial actions did I take? SilverMountain had a mistake in their skiable terrain so that was changed from 26819 to 1819 based on their website. HeavenlyMountainResort had an error in their snow making so was set to 2880 based on 60% of their land 4800 being covered.  \n",
+    "Where am I in this project? I have cleaned up the data and can now start analyzing relationship.  \n",
+    "What is the target feature for me to predict ticket price?  \n",
+    "How many rows were left in the data? 277  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
