--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -4867,7 +4867,7 @@
     "What rows have been removed? Why? 1 row was removed because the resort hadn't opened. Removed multiple rows because there was no price values for those resorts.  \n",
     "What other issues were found? What remedial actions did I take? SilverMountain had a mistake in their skiable terrain so that was changed from 26819 to 1819 based on their website. HeavenlyMountainResort had an error in their snow making so was set to 2880 based on 60% of their land 4800 being covered.  \n",
     "Where am I in this project? I have cleaned up the data and can now start analyzing relationship.  \n",
-    "What is the target feature for me to predict ticket price?  \n",
+    "What is the target feature for me to predict ticket price? The analysis here has not pinpointed a target feature I need to do further analysis to make that determination.  \n",
     "How many rows were left in the data? 277  "
    ]
   },
