Completed the data anlysis

--- a/Notebooks/03_exploratory_data_analysis.ipynb
+++ b/Notebooks/03_exploratory_data_analysis.ipynb
@@ -4003,7 +4003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -4443,7 +4443,7 @@
        "fastQuads_skiable_ratio                         0.00125  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4454,14 +4454,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing file.  \"../data/ski_data_step3_features.csv\"\n"
+      "A file already exists with this name.\n",
+      "\n",
+      "Do you want to overwrite? (Y/N)N\n",
+      "\n",
+      "Please re-run this cell with a new filename.\n"
      ]
     }
    ],
