Added the written analysis of our findings and decision.

--- a/Notebooks/04_preprocessing_and_training.ipynb
+++ b/Notebooks/04_preprocessing_and_training.ipynb
@@ -3778,7 +3778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3793,19 +3793,28 @@
     "#and the current datetime (`datetime.datetime.now()`) to the `build_datetime` attribute\n",
     "#Let's call this model version '1.0'\n",
     "best_model = rf_grid_cv.best_estimator_\n",
-    "best_model.version = ___\n",
-    "best_model.pandas_version = pd._version_\n",
-    "best_model.numpy_version = np._version_\n",
+    "best_model.version = '1.0'\n",
+    "best_model.pandas_version = pd.__version__\n",
+    "best_model.numpy_version = np.__version__\n",
     "best_model.sklearn_version = sklearn_version\n",
     "best_model.X_columns = [col for col in X_train.columns]\n",
-    "best_model.build_datetime = datetime.datetime"
+    "best_model.build_datetime = datetime.datetime.now()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Directory ../models was created.\n",
+      "Writing file.  \"../models/ski_resort_pricing_model.pkl\"\n"
+     ]
+    }
+   ],
    "source": [
     "# save the model\n",
     "\n",
@@ -3831,8 +3840,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** Your answer here"
+    "**A: 1**  \n",
+    "Gained a baseline idea by taking the average price and found we can predict ticket price within about 19 dollars.  \n",
+    "Built a linear model and found 8 features created the best fit.   \n",
+    "The cross-validation estimate on the test split was consistent with a predicted ticket price within 10 dollars.  \n",
+    "Using the random forest model was almost $1 better at predicting ticket prices than the linear regression model.  \n",
+    "We used the learning curve function to determine if we need more data, we do not.  \n",
+    "We are moving forward with the random forest model because it is a better fit and has less variability.  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
