Added written analysis.

--- a/Notebooks/05_modeling.ipynb
+++ b/Notebooks/05_modeling.ipynb
@@ -1382,7 +1382,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** Your answer here"
+    "**A: 1**  \n",
+    "At Big Mountain we currently sell tickets for \\\\$81.00, our model predicts the market can support a ticket price of \\\\$95.87. The expected error is \\\\$10.39 which means the market may actually only support a ticket price of \\\\$85.48, which would translate into an increase in revenue (assuming 350,000 visitors each buying 5 tickets) of \\\\$7,840,000, and based on the model would be a low risk. Having a ticket price of $95.87 produces a potential increase in revenue of \\\\$26,022,500 and would be a moderate risk. If we take a high risk and hypothesize out to the top of the model, the ticket price of \\\\$106.26 would produce a potential increase in revenue of \\\\$44,205,000. This year we have the additional operating cost of our new chair lift at \\\\$1,540,000 this would be covered by even the conservative assessment of the market at a ticket price of \\\\$85.48.  \n",
+    "  \n",
+    "There are a few scenarios to consider for the future. Looking at closing runs, the model suggests we can close 1 run without needing to decrease our ticket price. Closing 2 and 3 runs each decrease support for ticket prices leading to decreased revenue. If we close 3 runs there is a decrease in supported ticket price but that change is stable for closing 4 and 5 runs, so if we close 3 we may as well close 5. Closing 6 leads to a large ticket price drop. We may be able to try closing one run at a time and then reassessing our ticket prices during the off season.   \n",
+    "  \n",
+    "In the scenario where we add a run and increase the vertical drop by 150 feet, and install an additional chair lift, the model says there is market support for increasing ticket prices by \\\\$1.99. This would increase revenue over the season by \\\\$3,474,638.\n",
+    "  \n",
+    "The other scenarios I was asked to analyze did not produce an increase in revenue."
    ]
   },
   {
@@ -1403,8 +1410,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 2** Your answer here"
+    "**A: 2**  \n",
+    "For further analysis it would be helpful to have additional information on the other revenue streams for the Big Mountain Resort. If I had access to annual cost for each feature I could play around with more scenarios considering the cost of each feature and how to potentially maximize income. \n",
+    "  \n",
+    "Big Mountain resort is the most expensive skiing resort in Montana but the state and their population did not play a role in ticket prices. Now that we are analyzing what we offer compared to all resorts in the United States it has become clear we are pricing our resort below what the market will support. \n",
+    "  \n",
+    "How would I find out if the executives will be surprised by the modeled ticket price? Hmmm, this I have never considered. Perhaps by talking to my primary contact in the C-suite before our multi-executive meeting.\n",
+    "  \n",
+    "I would clean up the code and perhaps set up a dashboard where executives and their teams can fill in different numbers and set up different situations so that can make more nuanced decisions. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
